# sweat-booster

./: Cargo.toml  Makefile  README.md  mint.json  mint_clean.json  rust-toolchain.toml
.github/workflows/: deploy-production.yml  deploy-staging.yml  test.yml  undeploy-staging.yml
contract/: Cargo.toml
contract/src/: lib.rs
contract/src/auth/: api.rs  tests.rs
contract/src/burn/: api.rs  tests.rs
contract/src/common/: asserts.rs  ft_interface.rs  mod.rs  nft_interface.rs  test_data.rs  tests.rs
contract/src/config/: api.rs  tests.rs
contract/src/init/: api.rs  mod.rs  model.rs
contract/src/mint/: api.rs  mod.rs  model.rs  tests.rs
contract/src/redeem/: api.rs  tests.rs
contract/src/util/: asserts.rs  mod.rs
integration-tests/: Cargo.toml
integration-tests/src/: basics.rs  lib.rs  prepare.rs  test_basics.rs
integration-tests/src/common/: mod.rs  prepare.rs
integration-tests/src/feature/: burn.rs  mint.rs  mod.rs  redeem.rs
model/: Cargo.toml
model/src/: api.rs  booster.rs  event.rs  lib.rs  model.rs
res/: sweat_booster.wasm  sweat_booster_abi.json  sweat_booster_abi.zst
scripts/: build-integration.sh  build.sh  check-contract-hash.sh  deploy.sh  lint.sh  mutation.sh
src/: lib.rs
