[workspace]

resolver = "2"

default-members = ["contract"]
members = ["contract", "model", "tests"]

[workspace.dependencies]
near-sdk = "5.1.0"
near-contract-standards = "5.1.0"

near-workspaces = "0.11.0"
tokio = "1.12.0"
serde_json = "1"

nitka = "0.5.0"
nitka-proc = "0.5.0"

sweat-booster-model = { path = "model" }
