[workspace]

resolver = "2"

default-members = ["contract"]
members = ["contract", "model", "integration-tests"]

[workspace.dependencies]
near-sdk = "5.1.0"
near-contract-standards = "5.1.0"

near-workspaces = "0.10.1"
tokio = "1.18.1"
serde_json = "1"
anyhow = "1.0.75"

nitka = "0.5.0"
nitka-proc = "0.5.0"

sweat-booster-model = { path = "model" }

regex = "1.10.6"
