[workspace]

resolver = "2"

default-members = ["contract"]
members = ["contract", "model", "integration-tests"]

[workspace.dependencies]
near-sdk = "5.1.0"
near-contract-standards = "5.1.0"

near-workspaces = "0.10.1"
tokio = "1.18.1"
serde_json = "1"
anyhow = "1.0.75"

nitka = "0.4.0"
nitka-proc = "0.4.0"

regex = "1.10.6"

sweat-booster-model = { path = "model" }
sweat-model = { git = "https://github.com/sweatco/sweat-near", rev = "537ef7d0aa3bf58d87b77a1c9660b2d0299b6c00" }
