[package]
name = "sweat-booster"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/sweatco/sweat-booster"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:git-e3c8adb4b5542cbfc159bb1534f2b94c900c1648-1.80.0"
image_digest = "sha256:4bbcdf985936e1cb9b71c627a00cb9b53546ac0c9ef6b175da2918c1dea21363"
container_build_command = ["cargo", "near", "build"]

[features]
default = ["release"]
release = ["sweat-booster-model/release-api"]
integration-test = ["sweat-booster-model/release-api", "sweat-booster-model/integration-methods"]
integration-api = ["sweat-booster-model/integration-api"]

[dependencies]
near-sdk = { workspace = true }
near-contract-standards = { workspace = true }

sweat-booster-model = { workspace = true }
regex = "1.10.5"

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
near-workspaces = { workspace = true, features = ["unstable"] }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
regex = { workspace = true }
