[package]
name = "integration-tests"
version = "1.0.0"
publish = false
edition = "2021"

[lib]
name = "integration_tests"

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde_json = { workspace = true }

sweat-booster-model = { workspace = true, features = ["integration-test", "integration-methods", "integration-api"] }
nitka = { workspace = true }
near-workspaces = { workspace = true }
