[package]
name = "integration-tests"
version = "1.0.0"
publish = false
edition = "2021"

[lib]
name = "integration_tests"

[dependencies]
sweat-booster-model = { workspace = true, features = ["integration-test", "integration-methods", "integration-api"] }
sweat-model = { workspace = true, features = ["integration-api"] }
nitka = { workspace = true }

near-workspaces = { workspace = true }
near-sdk = { workspace = true }
near-contract-standards = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
